avance final clase 1

--- a/index.html
+++ b/index.html
@@ -1,11 +1,27 @@
 <!DOCTYPE html>
-<hatml>
+<html>
 <head>
-<title> Mi página web
+     <title> Mi página web
 </title>
+<!--Importar la hoja de estilos de página -->
+ <link rel="stylesheet" href="estilo.css" />
 </head>
 <body>
     <h1> Mi página web</h1>
-    <p> ¡Hola a todos! Bienvenidos a este espacio sobre mí</p>
+    <p class="parrafo">¡Hola a todos! Bienvenidos a este espacio sobre mí.</p>
+    <p class="parrafo"> Me encanta el color amarillo</p>
+    <p class="parrafo" id="parrafoUnico"> Me encancan las gomitas</p> 
+
+<div id="contenedor1">
+    <div class="cuadrado"></div>
+    <div class="cuadrado"></div>
+    <div class="cuadrado"></div>
+ </div>
+<div id="contenedor2">
+     <div class="cuadrado"></div>
+    <div class="cuadrado"></div>
+    <div class="cuadrado"></div>
+ </div>
+
 </body>
-</hatml>
+</html>
