--- a/index.html
+++ b/index.html
@@ -13,14 +13,14 @@
     <p class="parrafo" id="parrafoUnico"> Me encancan las gomitas</p> 
 
 <div id="contenedor1">
-    <div class="cuadrado"></div>
-    <div class="cuadrado"></div>
-    <div class="cuadrado"></div>
+    <div class="cuadrado" id="cuadro1"></div>
+    <div class="cuadrado" id="cuadro2"></div>
+    <div class="cuadrado" id="cuadro3"></div>
  </div>
 <div id="contenedor2">
-     <div class="cuadrado"></div>
-    <div class="cuadrado"></div>
-    <div class="cuadrado"></div>
+     <div class="cuadradow"></div>
+    <div class="cuadradow"></div>
+    <div class="cuadradow"></div>
  </div>
 
 </body>
