--- a/dibujo.html
+++ b/dibujo.html
@@ -1,15 +1,32 @@
 <!DOCTYPE html>
 <html>
 <head>
-     <title> Mi página web
-</title>
-<!--Importar la hoja de estilos de página -->
- <link rel="stylesheet" href="estilo.css" />
-</head>
-<body>
-    <h1 titulo mas chevre </h1>
-        <div id="lienzo"></div>
-    
+   <title>dibujo</title>
+<!-- Importar la hoja de estilos de la página -->​
+    <link rel="stylesheet" href="estilo.css" />​
 
+
+</head>
+
+<body>
+<h1 id="tituloDibujo">Base para dibujo en html y css</h1>
+<div id="lienzo">
+    <div class="circulo1" id= Ojo izquierdo ></div>
+        <div class="circulo2" id= Ojo derecho ></div>
+    <div  class="cuadrado1" id = Mejilla izquierda></div>
+    <div  class="cuadrado2" id = Mejilla derecha></div>
+    <div  class="circulo3" id = parpado izq derecha></div>
+    <div  class="circulo4" id = parpado dere derecha></div>
+     <div  class="rectangulo1" id = boca></div>
+     <div  class="rectangulo2" id = lengua></div>
+    <div  class="rectangulo3" id = ceja 1a></div>
+     <div  class="rectangulo4" id = ceja1b></div>
+     <div  class="rectangulo5" id = ceja 2a></div>
+    <div  class="rectangulo6" id = ceja 2b></div>
+          <div  class="triangulo1" id = nariz></div>
+    <div  class="lineaVertical"></div>
+       <div  class="lineaHorizontal"></div>
+</div>
 </body>
+
 </html>
