cambioes mi'ercoles 3 sept

--- a/otra.html
+++ b/otra.html
@@ -5,15 +5,23 @@
 </title>
 <!--Importar la hoja de estilos de página -->
  <link rel="stylesheet" href="estilo.css" />
- <script src ="script.js" defer></script>
 </head>
 <body>
-    <h1 id="TituloDePagina" class = "titulo"> Mi página web</h1>
+    <h1> Mi página web</h1>
     <p class="parrafo">¡Hola a todos! Bienvenidos a este espacio sobre mí.</p>
     <p class="parrafo"> Me encanta el color amarillo</p>
     <p class="parrafo" id="parrafoUnico"> Me encancan las gomitas</p> 
 
-
+<div id="contenedor1">
+    <div class="cuadrado" id="cuadro1"></div>
+    <div class="cuadrado" id="cuadro2"></div>
+    <div class="cuadrado" id="cuadro3"></div>
+ </div>
+<div id="contenedor2">
+     <div class="cuadradow"></div>
+    <div class="cuadradow"></div>
+    <div class="cuadradow"></div>
+ </div>
 
  <a href="dibujo.html">Link a dibujo</a>
 </body>
