cambios penúltima clase

--- a/index.html
+++ b/index.html
@@ -4,20 +4,19 @@
      </head>
      <body>
   <header class="container">
-  <h1>Why Phoenix?</h1>
-  <h2>Because Public Health Is In Decline
+  <h1>Bienvenidos a un recorrido por el espacio</h1>
+  <h2>empezamos con mirar al cielo
     <p class="animate-arrow">&darr;
     </p>
   </h2>
 </header>
 <section class="scroll-container">
   <div class="scroll-element js-scroll fade-in">
-<img src="https://i.ibb.co/tCLj2jR/image.png" width="450px" height= "400px">
+<img src="https://img.freepik.com/foto-gratis/hermosas-estre…turno_181624-622.jpg?semt=ais_incoming&w=740&q=80" width="450px" height= "400px">
   </div>
   <div class="scroll-caption" style= "color:gold;font-size:40px">
   
-    We Aim To Connect Communities to the 
-Health Information they Need And Reverse Recent Negative Trends
+    A simple vista, desde la Tierra y en una noche oscura sin contaminación lumínica, podemos ver entre 2.000 y 5.000 estrellas en el cielo.
 
   </div>
  
@@ -36,7 +35,8 @@ Health Information they Need And Reverse Recent Negative Trends
 </section>
 <section class="scroll-container">
   <div class="scroll-element js-scroll slide-left">
-<img src="https://www.itsup.edu.ec/library/epubfs.php?data=22422&db=0&comp=pic_53.jpg" width="500px" height="400px">
+<img src="https://upload.wikimedia.org/wikipedia/commons/b/b0/Geosynchronous_orbit.gif
+" width="500px" height="400px">
   </div>
   <div class="scroll-caption">
     <p style="font-size:40px"> Órbita media y geoestacionaria (2.000–36.000 km)
@@ -45,7 +45,7 @@ Health Information they Need And Reverse Recent Negative Trends
 </section>
 <section class="scroll-container">
   <div class="scroll-element js-scroll slide-right">
-<img src="https://fotografias.larazon.es/clipping/cmsimages0…dth=1028&height=578&optimize=medium&format=webply">
+<img src="https://content.nationalgeographic.com.es/medio/2022/10/03/luna_eedd0b00_800x533.jpg">
   </div>
   <div class="scroll-caption">
     <p style="font-size:40px"> La Luna (~384.400 km)
@@ -114,6 +114,6 @@ Health Information they Need And Reverse Recent Negative Trends
 
 
 <a herf ="Dibujo.html">Dibujo</a>
-</body>
+
 </html>
 
